--- a/.github/workflows/DeployStaticPortal.yml
+++ b/.github/workflows/DeployStaticPortal.yml
@@ -26,13 +26,13 @@ jobs:
       run: curl -X POST --url 'https://titan.apimatic.io/api/build' -F 'file=@portal-input.zip' -o portal-output.zip
       
     - name: list 
-      run: echo "ls"
+      run: ls
       
     - name: Extract generated SDK
       working-directory: 'spec'
       run: unzip -qq portal-output.zip -d static-portal
       
     - name: list 
-      run: echo "ls"
+      run: ls
     
       
