--- a/.github/workflows/DeployStaticPortal.yml
+++ b/.github/workflows/DeployStaticPortal.yml
@@ -34,7 +34,8 @@ jobs:
     - name: list 
       run: ls
       
-  deploy-to-netlify: 
+  deploy-to-netlify:
+    needs: generate-portal 
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
