Added readme, modified workflow, updated spec

--- a/.github/workflows/DeployStaticPortal.yml
+++ b/.github/workflows/DeployStaticPortal.yml
@@ -23,12 +23,12 @@ jobs:
       run: zip -qq -r portal-input.zip .
       
     - name: Call build endpoint
-      run: curl -X POST --url 'https://www.apimatic.io/api/portal' -H 'Authorization:X-Auth-Key uTmxzngzCkKBvmtmr_LcXRdyybHVKsGriJoZkRDtnzApz0A9PJEX6ORUZfq9HiUy' -F 'file=@portal-input.zip' -o portal-output.zip
+      run: curl -X POST --url 'https://www.apimatic.io/api/portal' -H 'Authorization:X-Auth-Key ${{ secrets.API_KEY }}' -F 'file=@portal-input.zip' -o portal-output.zip
       
     - name: list 
       run: ls
       
-    - name: Extract generated SDK
+    - name: Extract generated Portal
       run: unzip -qq portal-output.zip -d static-portal
       
     - name: list 
