--- a/.github/workflows/PublishSDK.yml
+++ b/.github/workflows/PublishSDK.yml
@@ -43,7 +43,7 @@ jobs:
        uses: actions/checkout@v2
        with:
         repository: 'apimatic/static-portal-sdk'
-        ref: 'main'
+        ref: 'master'
         token: ${{secrets.ACTIONS_PAT}}
         path: 'sdk'
           
