added call to Download SDK endpoint

--- a/.github/workflows/PublishSDK.yml
+++ b/.github/workflows/PublishSDK.yml
@@ -37,7 +37,16 @@ jobs:
     
      - name: Generate SDK
        working-directory: 'spec'
-       run: curl -X POST --url 'https://www.apimatic.io/api/code-generations/generate-via-file' -H 'Accept:application/json' -H 'Authorization:X-Auth-Key ${{ secrets.API_KEY }}' -F 'file=@api-spec.zip'  -F 'template=JAVA_ECLIPSE_JRE_LIB' -o java-sdk.zip
+      #  run: curl -X POST --url 'https://www.apimatic.io/api/code-generations/generate-via-file' -H 'Accept:application/json' -H 'Authorization:X-Auth-Key ${{ secrets.API_KEY }}' -F 'file=@api-spec.zip'  -F 'template=JAVA_ECLIPSE_JRE_LIB' -o java-sdk.zip
+       run: curl -X POST --url "https://www.apimatic.io/api/code-generations/generate-via-file" --header  "Authorization:X-Auth-Key ${{ secrets.API_KEY }}" --header "Accept:application/json" --header "content-type:multipart/form-data"  --form "file=@api-spec.zip"  --form "template=JAVA_ECLIPSE_JRE_LIB" -o output.json
+    
+     - name: Parse output
+       id: parse_output
+       run: echo '::set-output name=codegenId::'$(jq -r '.id' output.json)
+   
+     - name: Download SDK
+       working-directory: 'spec'
+       run: curl -X GET --url "https://www.apimatic.io/api/code-generations/${{ steps.parse_output.outputs.codegenId }}/generated-sdk" --header "Authorization:X-Auth-Key ${{ secrets.API_KEY }}" -o java-sdk.zip
     
      - name: Check-out static-portal-sdk repo
        uses: actions/checkout@v2
