--- a/.github/workflows/PublishSDK.yml
+++ b/.github/workflows/PublishSDK.yml
@@ -10,52 +10,40 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    #  - name: Make new directory
-    #    run: mkdir spec
-       
-    #  - name: Checkout main branch
-    #    uses: actions/checkout@v2
-    #    with:
-    #     repository: 'apimatic/apimatic-api-docs'
-    #     ref: 'main'
-    #     token: ${{ secrets.ACTIONS_PAT }}
-    #     path: 'api-docs'
-     
+        
      - name: Install zip
        uses: montudor/action-zip@v0.1.1
 
      - name: Install jq
        run: sudo apt-get install jq    
       
+#      checkout repo
      - uses: actions/checkout@v2
        name : checkout-repo
        id: checkout-repo  
 
-    #  - name: Copy spec folder to current directory
-    #    run: 'cp -r -f -a ./api-docs/spec ./spec'
-
+#      Zip the contents of the spec directory
      - name: Zip API spec
        working-directory: 'spec'
        run: zip -qq -r api-spec.zip .
-    
+       
+#      Call APIMatic API to generate SDK
      - name: Generate SDK
        working-directory: 'spec'
-      #  run: curl -X POST --url 'https://www.apimatic.io/api/code-generations/generate-via-file' -H 'Accept:application/json' -H 'Authorization:X-Auth-Key ${{ secrets.API_KEY }}' -F 'file=@api-spec.zip'  -F 'template=JAVA_ECLIPSE_JRE_LIB' -o java-sdk.zip
        run: curl -v -X POST --url "https://www.apimatic.io/api/code-generations/generate-via-file" --header  "Authorization:X-Auth-Key ${{ secrets.API_KEY }}" --header "Accept:application/json" --header "content-type:multipart/form-data"  --form "file=@api-spec.zip"  --form "template=JAVA_ECLIPSE_JRE_LIB" -o output.json
-    
+      
+#      Extract 'CodegenId' from API response
      - name: Parse output
        id: parse_output
        working-directory: 'spec'
        run: echo '::set-output name=codegenId::'$(jq -r '.id' output.json)
-   
+ 
+#      Retrieve SDK from APIMatic
      - name: Download SDK
        working-directory: 'spec'
        run: curl -X GET --url "https://www.apimatic.io/api/code-generations/${{ steps.parse_output.outputs.codegenId }}/generated-sdk" --header "Authorization:X-Auth-Key ${{ secrets.API_KEY }}" -o java-sdk.zip
-    
-     - name: list 
-       run: ls
-       working-directory: 'spec'
-        
+      
+#       unzip SDK retrieved from APIMatic
      - name: Extract generated SDK
        working-directory: 'spec'
        run: unzip -qq java-sdk.zip -d java-sdk
@@ -64,7 +52,7 @@ jobs:
        run: ls
        working-directory: 'spec'
 
-       
+#      checkout the repository where SDK needs to be uploaded
      - name: Check-out static-portal-sdk repo
        uses: actions/checkout@v2
        with:
@@ -73,14 +61,12 @@ jobs:
         token: ${{secrets.ACTIONS_PAT}}
         path: sdk-repo
       
-     - name: list 
-       run: ls 
-        
+#      Copy generated SDK files to the directory where SDk repository has been cloned
      - name: Copy SDK files
        working-directory: 'spec/java-sdk'
        run: cp -r -f -a . ../../sdk-repo --verbose
       
-        
+#      Commit and Push changes to the SDK repo  
      - name: Push updated SDK
        working-directory: 'sdk-repo'
        run: |
