remove montudor/action-zip

--- a/.github/workflows/DeployStaticPortal.yml
+++ b/.github/workflows/DeployStaticPortal.yml
@@ -12,8 +12,8 @@ jobs:
 
     steps:
     
-    - name: Install zip
-      uses: montudor/action-zip@v0.1.1
+#     - name: Install zip
+#       uses: montudor/action-zip@v0.1.1
       
     - uses: actions/checkout@v1
       name : checkout-repo
